[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/levels/LivingRoom.gd" type="Script" id=1]
[ext_resource path="res://actors/character/snowman/Snowman.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilesets/Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Art/Animation/Chimney/ChimneyAnimation1.png" type="Texture" id=4]
[ext_resource path="res://Art/Animation/Chimney/ChimneyAnimation2.png" type="Texture" id=5]
[ext_resource path="res://Art/Animation/Chimney/ChimneyAnimation3.png" type="Texture" id=6]
[ext_resource path="res://Art/Animation/Chimney/ChimneyAnimation4.png" type="Texture" id=7]
[ext_resource path="res://Art/Animation/Chimney/ChimneyAnimation5.png" type="Texture" id=8]
[ext_resource path="res://assets/SFX/Chimney.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/tilesets/Big-Tileset.png" type="Texture" id=10]
[ext_resource path="res://assets/tilesets/CameraShade.png" type="Texture" id=11]
[ext_resource path="res://assets/tilesets/LightningTorch.png" type="Texture" id=12]
[ext_resource path="res://assets/tilesets/GrinchDead.png" type="Texture" id=13]
[ext_resource path="res://scenes/levels/DifferentLivingRooms/DialogueGrinch.gd" type="Script" id=14]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim1.png" type="Texture" id=15]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim2.png" type="Texture" id=16]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim3.png" type="Texture" id=17]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim4.png" type="Texture" id=18]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim5.png" type="Texture" id=19]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim6.png" type="Texture" id=20]
[ext_resource path="res://assets/Font/Basis33.tres" type="DynamicFont" id=21]
[ext_resource path="res://Art/Animation/Button/ButtonAnim1.png" type="Texture" id=22]
[ext_resource path="res://Art/Animation/Button/ButtonAnim2.png" type="Texture" id=23]
[ext_resource path="res://Art/Animation/Button/ButtonAnim3.png" type="Texture" id=24]
[ext_resource path="res://Art/Animation/Button/ButtonAnim4.png" type="Texture" id=25]
[ext_resource path="res://Art/Animation/Button/ButtonAnim5.png" type="Texture" id=26]
[ext_resource path="res://Art/Animation/Button/ButtonAnim6.png" type="Texture" id=27]
[ext_resource path="res://assets/SFX/Button.wav" type="AudioStream" id=28]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 233, 130 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="LivingRoom" type="Node"]
script = ExtResource( 1 )

[node name="Snowman" parent="." instance=ExtResource( 2 )]
position = Vector2( 284.288, 418.399 )
z_index = 1

[node name="TileMap(structure)(0)" type="TileMap" parent="."]
position = Vector2( 64, 0 )
z_index = 3
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 131071, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 0, 65541, 11, 0, 65542, 11, 0, 65543, 11, 0, 65544, 11, 0, 65545, 11, 0, 65546, 11, 0, 65547, 11, 0, 196607, 11, 0, 131083, 11, 0, 262143, 11, 0, 196619, 11, 0, 327679, 11, 0, 262155, 11, 0, 393215, 11, 0, 327691, 11, 0, 458751, 11, 0, 393221, 46, 0, 393227, 11, 0, 524287, 11, 0, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 7, 0, 458760, 7, 0, 458761, 7, 0, 458762, 7, 0, 458763, 11, 0, 458764, 18, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 589823, 11, 0, 524288, 11, 0, 524289, 11, 0, 524290, 11, 0, 524291, 11, 0, 524292, 11, 0, 524293, 11, 0, 524294, 11, 0, 524295, 11, 0, 524296, 11, 0, 524297, 11, 0, 524298, 11, 0, 524299, 11, 0, 524300, 12, 0, 524301, 12, 0, 524302, 12, 0, 524303, 12, 0, 524304, 12, 0 )

[node name="TileMap(Background)(-2)" type="TileMap" parent="."]
position = Vector2( 64, 0 )
z_index = -2
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -3, 27, 0, -2, 27, 0, 65530, 27, 0, 65531, 27, 0, 65532, 27, 0, 65533, 27, 0, 65534, 27, 0, 65535, 28, 0, 0, 26, 0, 1, 26, 0, 2, 26, 0, 3, 26, 0, 4, 26, 0, 5, 26, 0, 6, 26, 0, 7, 28, 0, 8, 26, 0, 9, 26, 0, 10, 28, 0, 11, 26, 0, 12, 27, 0, 13, 26, 0, 14, 27, 0, 15, 26, 0, 16, 27, 0, 131066, 27, 0, 131067, 27, 0, 131068, 27, 0, 131069, 27, 0, 131070, 27, 0, 65548, 27, 0, 65549, 26, 0, 65550, 27, 0, 65551, 26, 0, 65552, 27, 0, 196602, 27, 0, 196603, 27, 0, 196604, 27, 0, 196605, 27, 0, 196606, 27, 0, 131072, 31, 0, 131073, 31, 0, 131074, 31, 0, 131075, 31, 0, 131076, 31, 0, 131077, 31, 0, 131078, 31, 0, 131079, 31, 0, 131080, 31, 0, 131081, 31, 0, 131082, 31, 0, 131084, 27, 0, 131085, 25, 0, 131086, 27, 0, 131087, 26, 0, 131088, 26, 0, 262138, 27, 0, 262139, 27, 0, 262140, 27, 0, 262141, 27, 0, 262142, 27, 0, 196608, 31, 0, 196609, 31, 0, 196610, 31, 0, 196611, 31, 0, 196612, 31, 0, 196613, 31, 0, 196614, 31, 0, 196615, 31, 0, 196616, 31, 0, 196617, 31, 0, 196618, 31, 0, 196619, 27, 0, 196620, 27, 0, 196621, 27, 0, 196622, 26, 0, 196623, 26, 0, 196624, 27, 0, 327674, 27, 0, 327675, 27, 0, 327676, 27, 0, 327677, 27, 0, 327678, 27, 0, 262144, 31, 0, 262145, 31, 0, 262146, 31, 0, 262147, 31, 0, 262148, 31, 0, 262149, 31, 0, 262150, 31, 0, 262151, 31, 0, 262152, 31, 0, 262153, 31, 0, 262154, 31, 0, 262156, 27, 0, 262157, 26, 0, 262158, 26, 0, 262159, 27, 0, 262160, 26, 0, 393210, 27, 0, 393211, 27, 0, 393212, 27, 0, 393213, 27, 0, 393214, 27, 0, 327680, 31, 0, 327681, 31, 0, 327682, 31, 0, 327683, 31, 0, 327684, 31, 0, 327685, 31, 0, 327686, 31, 0, 327687, 31, 0, 327688, 31, 0, 327689, 31, 0, 327690, 31, 0, 327692, 27, 0, 327693, 26, 0, 327694, 26, 0, 327695, 27, 0, 327696, 26, 0, 458746, 27, 0, 458747, 27, 0, 458748, 27, 0, 458749, 27, 0, 458750, 27, 0, 393216, 31, 0, 393217, 31, 0, 393218, 31, 0, 393219, 31, 0, 393220, 31, 0, 393221, 31, 0, 393222, 31, 0, 393223, 31, 0, 393224, 31, 0, 393225, 31, 0, 393226, 31, 0, 393228, 27, 0, 393229, 27, 0, 393230, 27, 0, 393231, 27, 0, 393232, 27, 0, 458752, 31, 0, 458753, 31, 0, 458754, 31, 0, 458755, 31, 0, 458756, 31, 0, 458757, 31, 0, 458758, 31, 0, 458759, 31, 0, 458760, 31, 0, 458761, 31, 0, 458762, 31, 0 )

[node name="TileMap(Background)(-1)" type="TileMap" parent="."]
position = Vector2( 64, 0 )
z_index = -1
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 262151, 0, 35, 0, 0, 262151, 36, 0, 393211, 34, 0, 393213, 34, 0, 327692, 34, 0, 327694, 34, 0, 327695, 34, 0, 524282, 18, 0, 524283, 18, 0, 524284, 18, 0, 524285, 18, 0, 524286, 18, 0, 589818, 12, 0, 589819, 12, 0, 589820, 12, 0, 589821, 12, 0, 589822, 12, 0, 655354, 12, 0, 655355, 12, 0, 655356, 12, 0, 655357, 12, 0, 655358, 12, 0, 655359, 12, 0, 589824, 12, 0, 589825, 12, 0, 589826, 12, 0, 589827, 12, 0, 589828, 12, 0, 589829, 12, 0, 589830, 12, 0, 589831, 12, 0, 589832, 12, 0, 589833, 12, 0, 589834, 12, 0, 589835, 12, 0, 589836, 12, 0, 589837, 12, 0, 589838, 12, 0, 589839, 12, 0, 589840, 12, 0, 655373, 12, 0, 655374, 12, 0, 655375, 12, 0 )

[node name="Chimney" type="AnimatedSprite" parent="."]
position = Vector2( 320, 288 )
scale = Vector2( 2.707, 2.496 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Chimney"]
stream = ExtResource( 9 )
volume_db = -6.0
autoplay = true
max_distance = 1000.0

[node name="Christmas Tree" type="Sprite" parent="."]
position = Vector2( 584, 130 )
scale = Vector2( 2.7067, 2.49626 )
texture = ExtResource( 10 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 0, 64, 128 )

[node name="CameraShade" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.447059 )
position = Vector2( 323.586, 356.227 )
scale = Vector2( 8.29598, 3.7107 )
z_index = 4
texture = ExtResource( 11 )

[node name="ChimneyLight" type="Light2D" parent="."]
position = Vector2( 350.736, 382.156 )
scale = Vector2( 2.69, 1.71 )
texture = ExtResource( 12 )
color = Color( 0.952941, 0.909804, 0.709804, 1 )

[node name="Grinch" type="Sprite" parent="."]
position = Vector2( 559, 383 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="GrinchDialogue" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 510, 330 )
collision_layer = 0
collision_mask = 1024
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrinchDialogue"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="GrinchDialogue"]

[node name="DialogueGrinch" type="AnimatedSprite" parent="GrinchDialogue"]
editor/display_folded = true
visible = false
frames = SubResource( 3 )
frame = 2
playing = true

[node name="Label1" type="Label" parent="GrinchDialogue/DialogueGrinch"]
visible = false
margin_left = -52.0
margin_top = -16.0
margin_right = 109.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 21 )
text = "Holy Sant.
What happpened 
to him ?"

[node name="Label2" type="Label" parent="GrinchDialogue/DialogueGrinch"]
visible = false
margin_left = -52.0
margin_top = -16.0
margin_right = 109.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 21 )
text = "Seems like he
was delivering 
all the presents"

[node name="Label3" type="Label" parent="GrinchDialogue/DialogueGrinch"]
visible = false
margin_left = -52.0
margin_top = -16.0
margin_right = 109.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 21 )
text = "So he wasnt the 
one who tried to
ruin christmas.."

[node name="Label4" type="Label" parent="GrinchDialogue/DialogueGrinch"]
visible = false
margin_left = -52.0
margin_top = -16.0
margin_right = 109.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 21 )
text = "But who would
be able to do 
THAT?!"

[node name="Button" type="AnimatedSprite" parent="GrinchDialogue"]
visible = false
position = Vector2( 80, 36 )
frames = SubResource( 4 )
frame = 3
playing = true

[node name="ButtonSFX" type="AudioStreamPlayer" parent="GrinchDialogue"]
stream = ExtResource( 28 )

[connection signal="area_entered" from="GrinchDialogue" to="GrinchDialogue" method="_on_GrinchDialogue_area_entered"]
[connection signal="area_exited" from="GrinchDialogue" to="GrinchDialogue" method="_on_GrinchDialogue_area_exited"]
